--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_API_HOST=https://file-manager-node-server.herokuapp.com
-REACT_APP_SYNC_API_HOST=https://file-manager-node-server1.herokuapp.com
+REACT_APP_SYNC_API_HOST=https://file-manager-node-server1.herokuapp.com/
